--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dev": "nodemon ./src/service/app.ts",
+    "start": "ts-node ./src/service/app.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
+    "express": "^4.21.2",
     "jstoxml": "^3.2.3",
     "nodemon": "^2.0.15",
     "reflect-metadata": "^0.1.13",
@@ -27,6 +29,7 @@
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.2",
     "uuid": "^8.3.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zod": "^3.25.23"
   }
 }
